[package]
name = "miniblink"
version = "0.1.5"
edition = "2021"
authors = ["The miniblink-rs Authors"]
description = "Rust bindings to mininlink49"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/felixmaker/miniblink-rs"
documentation = "https://docs.rs/miniblink"
categories = [ "gui" ]
exclude = ["./examples"]

[dependencies]
miniblink-sys = { path = "../miniblink-sys", version = ">=0.1.1" }
raw-window-handle = {version = "0.6", optional = true}
serde = {version = "1", optional = true}

[dev-dependencies]
winit = "0.29"
serde = "1"
serde_derive = "1"

[features]
default = ["serde", "rwh_06"]
serde = ["dep:serde"]
rwh_06 = ["dep:raw-window-handle"]
