[package]
name = "miniblink"
version = "0.3.0"
edition = "2021"
authors = ["felixmaker"]
description = "Rust bindings to mininlink49"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/felixmaker/miniblink-rs"
documentation = "https://docs.rs/miniblink"
categories = [ "gui" ]
exclude = ["./examples"]

[dependencies]
miniblink-sys = { path = "../miniblink-sys", version = "=0.3" }
